-Refactored synch-manager to use reflection to break the infectivity of Reloadable when rebuilding the AllPaths tables -Updated the args to require that the path of the install.properties is included
git-svn-id: https://subversion.assembla.com/svn/mdss@6198 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: e3903b21e15fbcaf8720f4a9253b493b425f4556 [formerly ee80d4527895c221c93be93bb24dcda0e2d44263]
Former-commit-id: a6be376e452ade03768a57df203f90812945e5b4