@@ -22,7 +22,7 @@ public class BackupRestoreAction extends Action implements UncaughtExceptionHand
   {
     super(Localizer.getMessage("BACKUP_RESTORE"), ImageDescriptor.createFromURL(Object.class.getResource("/icons/Backup_Green_Button.png")));
     this.setToolTipText(Localizer.getMessage("BACKUP_RESTORE"));
-    
+
     this.context = context;
   }
 
@@ -49,16 +49,20 @@ public class BackupRestoreAction extends Action implements UncaughtExceptionHand
             project.setBaseDir(new File(System.getProperty("user.dir")));
             project.init();
 
-            Java javaTask = new Java();
-            javaTask.setTaskName("runjava");
-            javaTask.setProject(project);
-            javaTask.setFork(true);
-            javaTask.setFailonerror(true);
-            javaTask.setClassname("com.runwaysdk.manager.BackupManagerWindow");
-            javaTask.setClasspath(new Path(project, classpath.toString()));
-            javaTask.init();
+            Java java = new Java();
+            java.setTaskName("runjava");
+            java.setProject(project);
+            java.setFork(true);
+            java.setFailonerror(true);
+            java.setClassname("com.runwaysdk.manager.BackupManagerWindow");
+            java.setClasspath(new Path(project, classpath.toString()));
+            java.init();
 
-            javaTask.executeJava();
+            java.createJvmarg().setValue("-Xms" + ManagerProperties.getProcessMemoryMin());
+            java.createJvmarg().setValue("-Xmx" + ManagerProperties.getProcessMemoryMax());
+            java.createJvmarg().setValue("-XX:PermSize=" + ManagerProperties.getProcessPermSize());
+
+            java.executeJava();
           }
           catch (Exception e)
           {
